fix: Long link overflow and set the min-width for table items

--- a/source/css/_common/components/plugins/table.styl
+++ b/source/css/_common/components/plugins/table.styl
@@ -1,13 +1,18 @@
 .table-plugin {
-  & tbody tr {
+  tr {
     transition: background-color .2s ease;
 
-    &:nth-of-type(odd) {
+    &:nth-of-type(even) {
       background-color: var(--color-gray-150);
     }
 
     &:hover {
       background-color: var(--color-gray-200);
     }
+  }
+
+  th,
+  td {
+    min-width: 5rem;
   }
 }
