--- a/source/css/_common/scaffolding/base.styl
+++ b/source/css/_common/scaffolding/base.styl
@@ -130,11 +130,11 @@ blockquote {
 }
 
 code {
+  break-word();
   border-radius: 3px;
   padding: 1px 5px;
   font-family: $font-family-code;
   font-size: .95em;
-  word-wrap: break-word;
   color: var(--color-gray-700);
   background-color: var(--color-gray-200);
 }
